--- a/style.css
+++ b/style.css
@@ -1,20 +1,37 @@
-body {
-    background-color: #383D58;
-    color: white;
-}
 header {
     background-color: #383D58;
     color: white;
     display:flex;
     justify-content: space-around;
 }
+.cabecalho-imagem{
+    width: 20%;
+}
+.cabecalho {
+    background-color: #383D58;
+    color: rgb(255, 255, 255);
+    display:flex;
+    justify-content: space-around;
+    padding: 24px 0;
+}
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
-    }
-    * {
-        margin: 0 16px;
-        justify-content: space-around;
-padding: 24px 0;
-font-size: 24px;
-        } 
+    padding: 24px 0;
+    font-size: 24px;
+}
+.escola-imagem{
+    width: 25%;
+}
+.escola {
+    background-image: linear-gradient(#383D58,#00c0eb);
+    color: white;
+    display: flex;
+}
+.escola_conteudo{
+    width: 35%;
+}
+.escola{display: flex;
+justify-content: center;
+align-items: center;
+}
